Fixed layout issues

--- a/client/views/commentbox.css
+++ b/client/views/commentbox.css
@@ -41,7 +41,7 @@
   color: #424242;
   font-size: 28px;
   font-weight: 100;
-  cursor: pointer;
+  /*cursor: pointer;*/
 }
 
 .comment-box .comment-box-subtitle {
@@ -52,7 +52,7 @@
   color: #a7afb7;
   font-size: 11px;
   font-weight: 300;
-  cursor: pointer;
+  /*cursor: pointer;*/
 }
 
 .comment-box .commentbox-sentiment-dot {
